deployment/deployment.yaml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codification-ape-model-deployment-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codification-ape-model-deployment-dev
  template:
    metadata:
      labels:
        app: codification-ape-model-deployment-dev
    spec:
      containers:
        - name: codif-ape-app-dev
          image: thomasfaria/codification-ape-api:main
          imagePullPolicy: Always
          resources:
            limits:
              memory: "20Gi"
              cpu: "2000m"
          workers: 10
          workerTimeout: 600
