deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codification-ape-model-service-dev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: codification-ape-model-deployment-dev
