deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codification-ape-model-ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
spec:
  tls:
    - hosts:
        - codification-ape.lab-dev.sspcloud.fr
  rules:
    - host: codification-ape.lab-dev.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codification-ape-model-service-dev
                port:
                  number: 80
